--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div>
-        <a href="cesar/index.php" class="text link" >Шрифт Цезаря</a>
+        <a href="cesar/index.php" class="text link" >Шрифт Цезаря</a><br>
+        <a class="text link" href="nums/index.php">Замена цифр</a><br>
+        <a class="text link" href="atbash/index.php">Шифр Атбаш</a>
     </div>
 </body>
 </html>
