--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div>
         <a href="cesar/index.php" class="text link" >Шрифт Цезаря</a><br>
         <a class="text link" href="nums/index.php">Замена цифр</a><br>
-        <a class="text link" href="atbash/index.php">Шифр Атбаш</a>
+        <a class="text link" href="atbash/index.php">Шифр Атбаш</a><br>
+        <a class="text link" href="vigener/index.php">Шифр Виженера</a>
     </div>
 </body>
 </html>
