--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div>
-        <a href="cesar/index.php" class="text link" >Шрифт Цезаря</a><br>
+        <a href="cesar/index.php" class="text link" >Шифр Цезаря</a><br>
         <a class="text link" href="nums/index.php">Замена цифр</a><br>
         <a class="text link" href="atbash/index.php">Шифр Атбаш</a><br>
-        <a class="text link" href="vigener/index.php">Шифр Виженера</a>
+        <a class="text link" href="vigener/index.php">Шифр Виженера</a><br>
+        <a class="text link" href="masons/index.php">Шифр масонов</a>
     </div>
 </body>
 </html>
